<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#697B54"
    tools:context=".SignIn">

    <androidx.cardview.widget.CardView
        app:layout_constraintBottom_toTopOf="@+id/stud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="410dp"
        android:layout_height="568dp"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="15dp">

        <androidx.cardview.widget.CardView
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="90dp"
            android:backgroundTint="#D9D9D9"
            app:cardCornerRadius="10dp">

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="175dp"
            android:backgroundTint="#D9D9D9"
            app:cardCornerRadius="10dp" >

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="180dp"
            android:autofillHints=""
            android:backgroundTint="#D9D9D9"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginStart="270dp"
            android:layout_marginTop="270dp"
            android:backgroundTint="#697B54"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="285sp"
            android:text="@string/sign_in"
            android:textColor="#697B54"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="32dp"
            android:layout_height="39dp"
            android:layout_marginStart="290dp"
            android:layout_marginTop="290dp"
            android:backgroundTint="#697B54"
            android:contentDescription="@string/todo1"
            android:src="@drawable/go" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="400sp"
            android:text="@string/no_account"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="218dp"
            android:layout_marginTop="400sp"
            android:text="@string/sign_up"
            android:textColor="#697B54"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="93dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="326dp"
        android:layout_height="185dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/todoo"
        android:src="@drawable/wc" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="99dp"
        android:layout_height="87dp"
        android:src="@drawable/back"
        android:layout_marginTop="15dp"
        android:layout_marginStart="-10dp"
        android:contentDescription="@string/todooo" />
</FrameLayout>